--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
           </form>
           <p id="result" class="mt-3"></p>
         </div>
+
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="grade">
+            <label for="gradeCalculator">Enter Your grade</label>
+            <input type="number" name="gradeCalculator" id="gradeInput" />
+            <button type="submit" class="btn btn-primary">Convert</button>
+          </form>
+          <p id="result2" class="mt-3"></p>
+        </div>
       </div>
     </div>
 
