--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
           </form>
           <p id="result3" class="mt-3"></p>
         </div>
+
+        <!-- Even -odd -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="ageForm">
+            <label for="ageInput">Enter Your age</label>
+            <input
+              type="number"
+              name="age"
+              id="ageInput"
+              class="form-control"
+            />
+            <button type="submit" class="btn btn-primary mt-3">
+              Check Price
+            </button>
+          </form>
+          <p id="result4" class="mt-3"></p>
+        </div>
       </div>
     </div>
 
