--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p id="result3" class="mt-3"></p>
         </div>
 
-        <!-- Even -odd -->
+        <!-- Ticket checker -->
         <div class="col-sm-12 col-md-6 border border-dark p-3">
           <form id="ageForm">
             <label for="ageInput">Enter Your age</label>
@@ -82,6 +82,23 @@
             </button>
           </form>
           <p id="result4" class="mt-3"></p>
+        </div>
+
+        <!-- Leap Year -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="yearForm">
+            <label for="ageInput">Enter a Year</label>
+            <input
+              type="number"
+              name="year"
+              id="yearInput"
+              class="form-control"
+            />
+            <button type="submit" class="btn btn-primary mt-3">
+              Check Year
+            </button>
+          </form>
+          <p id="result5" class="mt-3"></p>
         </div>
       </div>
     </div>
