--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Temperature Conversion</title>
+    <title>PHP Basics</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <h1 class="text-center">Temperature Conversion</h1>
+    <h1 class="text-center">PHP Basics</h1>
     <div
       class="container d-flex flex-column justify-content-center align-items-center"
     >
@@ -99,6 +99,23 @@
             </button>
           </form>
           <p id="result5" class="mt-3"></p>
+        </div>
+
+        <!-- Day of week -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="dowForm">
+            <label for="ageInput">Enter a Day</label>
+            <input
+              type="number"
+              name="year"
+              id="dowInput"
+              class="form-control"
+            />
+            <button type="submit" class="btn btn-primary mt-3">
+              Check Day
+            </button>
+          </form>
+          <p id="result6" class="mt-3"></p>
         </div>
       </div>
     </div>
