Factorial exercise done, created embedded.php, which contains html file

--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@
           </form>
           <p id="result6" class="mt-3"></p>
         </div>
+
+        <!-- Factorial -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="factorialForm">
+            <label for="factorialInput">Enter a Number</label>
+            <input
+              type="number"
+              name="factorialInput"
+              id="factorialInput"
+              class="form-control"
+            />
+            <button type="submit" class="btn btn-primary mt-3">
+              Check Factorial
+            </button>
+          </form>
+          <p id="result7" class="mt-3"></p>
+        </div>
       </div>
     </div>
 
