completed multiplication exrcise

--- a/index.html
+++ b/index.html
@@ -135,6 +135,32 @@
           <p id="result7" class="mt-3"></p>
         </div>
       </div>
+
+      <div class="row">
+        <h3>A bit advanced</h3>
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="multForm">
+            <label for="multInput1">Enter a Start Number</label>
+            <input
+              type="number"
+              name="multInput1"
+              id="multInput1"
+              class="form-control"
+            />
+            <label for="multInput2">Enter a end</label>
+            <input
+              type="number"
+              name="multInput2"
+              id="multInput2"
+              class="form-control"
+            />
+            <button type="submit" class="btn btn-primary mt-3">
+              Generate table
+            </button>
+          </form>
+          <div id="result8" class="mt-3"></div>
+        </div>
+      </div>
     </div>
 
     <script src="./script.js"></script>
