reformated the code

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
       <div class="row">
         <h3>A bit advanced</h3>
+        <!-- Multiplication Table -->
         <div class="col-sm-12 col-md-6 border border-dark p-3">
           <form id="multForm">
             <label for="multInput1">Enter a Start Number</label>
@@ -159,6 +160,30 @@
             </button>
           </form>
           <div id="result8" class="mt-3"></div>
+        </div>
+
+        <!-- Even List -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="evenListForm">
+            <label for="evenListInput1">Enter a Start Number</label>
+            <input
+              type="number"
+              name="evenListInput1"
+              id="evenListInput1"
+              class="form-control"
+            />
+            <label for="evenListInput2">Enter a end</label>
+            <input
+              type="number"
+              name="evenListInput2"
+              id="evenListInput2"
+              class="form-control"
+            />
+            <button type="submit" class="btn btn-primary mt-3">
+              Generate table
+            </button>
+          </form>
+          <div id="result9" class="mt-3"></div>
         </div>
       </div>
     </div>
