--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               class="form-control"
             />
             <button type="submit" class="btn btn-primary mt-3">
-              Generate table
+              Check Even
             </button>
           </form>
           <div id="result9" class="mt-3"></div>
