created basic structure for dice roller app

--- a/index.html
+++ b/index.html
@@ -185,6 +185,24 @@
           </form>
           <div id="result9" class="mt-3"></div>
         </div>
+
+        <!-- Dice rolling app -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="diceRollForm">
+            <button type="submit" class="btn btn-primary mt-3">
+              Roll Dice
+            </button>
+          </form>
+          <div
+            class="d-flex flex-row border border-black ustify-content-between"
+          >
+            <p id="d1"></p>
+            <p id="d2"></p>
+            <p id="d3"></p>
+            <p id="d4"></p>
+            <p id="d5"></p>
+          </div>
+        </div>
       </div>
     </div>
 
