completed dice roll exercise

--- a/index.html
+++ b/index.html
@@ -193,15 +193,7 @@
               Roll Dice
             </button>
           </form>
-          <div
-            class="d-flex flex-row border border-black ustify-content-between"
-          >
-            <p id="d1"></p>
-            <p id="d2"></p>
-            <p id="d3"></p>
-            <p id="d4"></p>
-            <p id="d5"></p>
-          </div>
+          <div id="result10"></div>
         </div>
       </div>
     </div>
