--- a/index.html
+++ b/index.html
@@ -195,6 +195,16 @@
           </form>
           <div id="result10"></div>
         </div>
+
+        <!-- Fancier dice roller -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="fancierDiceRollForm">
+            <button type="submit" class="btn btn-primary mt-3">
+              Roll Dice Fancier
+            </button>
+          </form>
+          <div id="result11"></div>
+        </div>
       </div>
     </div>
 
