--- a/index.html
+++ b/index.html
@@ -205,6 +205,20 @@
           </form>
           <div id="result11"></div>
         </div>
+
+        <!-- Password Generator -->
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <form id="passwordForm">
+            <button type="submit" class="btn btn-primary mt-3">
+              Generate Password
+            </button>
+          </form>
+          <div id="result13"></div>
+        </div>
+
+        <div class="col-sm-12 col-md-6 border border-dark p-3">
+          <div id="result14"></div>
+        </div>
       </div>
     </div>
 
